// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for multiple items 1`] = `
<div>
  <p>
    Viewing 
    3
     expenses totalling 
    $1,141.95
  </p>
</div>
`;

exports[`should render correctly for one item 1`] = `
<div>
  <p>
    Viewing 1 expense totalling 
    $1.95
  </p>
</div>
`;

exports[`should render correctly for zero items 1`] = `
<div>
  <p>
    Viewing 
    0
     expenses totalling 
    $0.00
  </p>
</div>
`;
